<fixes overflow on header>

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h2, h3 {
  nav {
     float: right;
     margin-top: 25px;
+    overflow: hidden;
  }
 
  nav a {
